2023-05-05  Mike FABIAN  <mfabian@redhat.com>

	Version 1.8.1 released.

	* configure.ac: Version changed to 1.8.1

2023-05-04  Mike FABIAN  <mfabian@redhat.com>

	* configure.ac: Update with autoupdate
	* src/.cvsignore: Delete it
	* m4/.cvsignore: Delete it

2022-01-27  Helmut Grohne  <helmutg@debian.org>

	* configure.ac: Use "$PKG_CONFIG" instead of directly calling
	pkg-config.

2020-03-08  handa  <handa@gnu.org>

	* README: Fix typos: libimx -> libmimx

2018-10-22  Boyuan Yang  <byang@debian.org>

	* configure.ac: Do not use the program freetype-config, use
	PKG_CHECK_MODULES for checking freetype2.

2018-02-08  K. Handa  <handa@gnu.org>

	Version 1.8.0 released.

	* configure.ac: Version changed to 1.8.0.

2017-12-08  handa  <handa@gnu.org>

	* .gitignore: Add TAGS.

2016-01-12  K. Handa  <handa@gnu.org>

	Install m17n-config only on a system that does not have pkg-config.

	* configure.ac: Make HAVE_PKG_CONFIG AM_CONDITIONAL.

	* Makefile.am (BINSCRIPTS): New variable set conditionally.
	(bin_SCRIPTS): Set to the value of BINSCRIPTS.

2015-08-29  K. Handa  <handa@gnu.org>

	* configure.ac: Version changed to 1.7.1.
	(API_VERSION): Change to 4.2.4.

2015-04-05  K. Handa  <handa@gnu.org>

	* m17n-config.in: Change the encoding to utf-8.

2014-12-10  K. Handa  <handa@gnu.org>

	* Version 1.7.0 released.

2014-12-10  K. Handa  <handa@gnu.org>

	* configure.ac (API_VERSION): Change to 4:1:4 (revision incremented).

2014-11-11  K. Handa  <handa@gnu.org>

	* .gitignore: Converted from .cvsigore.

	* .cvsignore: Delete it.

2014-10-18  K. Handa  <handa@gnu.org>

	* configure.ac: Version changed to 1.7.0.

2012-09-18  Kenichi Handa  <handa@m17n.org>

	* Version 1.6.4 released.

2012-04-23  Kenichi Handa  <handa@m17n.org>

	* configure.ac: Version changed to 1.6.4.

2011-10-11  Kenichi Handa  <handa@m17n.org>

	* Version 1.6.3 released.

2011-09-12  Kenichi Handa  <handa@m17n.org>

	* configure.ac: Version changed to 1.6.3.
