@@ -1,3 +1,7 @@
+2023-05-09  Sergei Trofimovich <slyich@gmail.com>
+
+	* src/Makefile.am: switch from absolute to relative paths
+
 2023-05-05  Mike FABIAN  <mfabian@redhat.com>
 
 	Version 1.8.1 released.
